k8s_files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-prime
  labels:
    app: amazon-prime
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: amazon-prime
  type: NodePort
...
